[package]
name = "barentp"
version = "1.0.0"
edition = "2024"

[features]
default = []
std = []
async = []
chrono = ["dep:chrono"]

[dependencies]
chrono = { version = "0.4.40", optional = true, default-features = false }


[[example]]
name = "stdlib"
required-features = ["std", "chrono"]

[[test]]
name = "compare_to_system_time"
required-features = ["std", "chrono"]

[dev-dependencies]
dns-lookup = "2.0.4"
chrono = { version = "0.4.40", default-features = false, features = ["std", "now"] }
