[package]
name = "barentp"
version = "1.3.0"
edition = "2021"
description = "An NTP client library for use with and without the standard library."
license-file = "LICENSE"
documentation = "https://docs.rs/barentp"
repository = "https://github.com/ExPixel/barentp"

[features]
default = []
std = []
async = []
chrono = ["dep:chrono"]

[dependencies]
chrono = { version = "0.4.40", optional = true, default-features = false }


[[example]]
name = "stdlib"
required-features = ["std", "chrono"]

[[test]]
name = "timestamp_test"
required-features = ["std", "chrono"]

[dev-dependencies]
dns-lookup = "2.0.4"
chrono = { version = "0.4.40", default-features = false, features = ["std", "now"] }
